[gd_scene load_steps=3 format=3 uid="uid://dr5epmo5ckwhb"]

[ext_resource type="Script" uid="uid://lwe00r0docxk" path="res://scenes/weapon_base/weapon_base.gd" id="1_00jfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tl855"]
radius = 150.0

[node name="WeaponBase" type="Node2D"]
script = ExtResource("1_00jfh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_tl855")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="WeaponBehaviour" type="Node2D" parent="."]

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
